# AttitudeDetermination

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  dynamic-readme.yaml
attdet/: CMakeLists.txt
attdet/alglin/: CMakeLists.txt
attdet/alglin/include/: alglin.hpp  array.hpp
attdet/alglin/include/alglin/: alglin.hpp  array.hpp
attdet/alglin/tests/: alglin-tests.cpp
attdet/benchmark/: attdet-benchmark.cpp
attdet/benchmark/output/: perf.data
attdet/include/: attdet.h
attdet/include/attdet/: attdet.h
attdet/src/: attdet.cpp
attdet/tests/: attdet-tests.cpp
examples/quest/: CMakeLists.txt
examples/quest/include/: quest.h
examples/quest/src/: quest.cpp
examples/serial/: CMakeLists.txt
examples/serial/include/: serial.h
examples/serial/src/: serial.cpp
examples/websocket/: CMakeLists.txt
examples/websocket/include/: websocket.h
examples/websocket/src/: websocket.cpp
misc/: quest.py  quest_impl2.cpp
scripts/: flamegraph.sh  text-size.sh
